# sam2

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build_and_upload_wheel.sh  build_cuda_ext.py  docker-compose.yaml  pyproject.toml  setup.py
.github/workflows/: check_fmt.yml
demo/backend/server/: app.py  app_conf.py
demo/frontend/: package.json
notebooks/: generic_video_predictor_example.ipynb
sam2/: automatic_mask_generator.py  build_sam.py  sam2_generic_video_predictor.py  sam2_image_predictor.py  sam2_video_predictor.py
sam2/configs/efficienttam/: efficienttam_s.yaml  efficienttam_s_1.yaml  efficienttam_s_2.yaml  efficienttam_ti.yaml  efficienttam_ti_1.yaml  efficienttam_ti_2.yaml  efficienttam_ti_512x512.yaml
sam2/modeling/: cross_attention_fuser_alternative.py  cross_attention_fuser_original.py  dino_encoder.py  memory.py  sam2_base.py  sam2_generic.py  sam2_memory.py  sam2_prompt.py  sam2_result.py  sam2_utils.py
sam2/modeling/backbones/: hieradet.py  image_encoder.py  vitdet.py
sam2/modeling/sam/: transformer.py
sam2/utils/: Track.py  amg.py  misc.py  transforms.py
sam2_config/sam2/: sam2_hiera_b+.yaml  sam2_hiera_l.yaml  sam2_hiera_s.yaml  sam2_hiera_t.yaml
sam2_config/sam2.1/: sam2.1_hiera_b+.yaml  sam2.1_hiera_l.yaml  sam2.1_hiera_s.yaml  sam2.1_hiera_t.yaml
sam2_config/sam2.1_training/: sam2.1_hiera_b+_MOSE_finetune.yaml
sam2_metrics/: per_video_metrics.csv  results.json
sav_dataset/: sav_visualization_example.ipynb
sav_dataset/utils/: sav_benchmark.py
scripts/: merge_decoder_checkpoint.py  train_dino_fusion.py  train_dino_fusion_clips.py  train_dino_fusion_clips_overfit.py  train_sam2_decoder.py
src/sam2/: __init__.py  automatic_mask_generator.py  build_sam.py  sam2_camera_predictor.py  sam2_image_predictor.py  sam2_video_predictor.py
src/sam2/modeling/: memory_attention.py  (+2 more)
tools/: eval_predictions.py  vos_inference_dino_ablations.py  vos_inference_dino_fusion.py
training/: README.md  loss_fns.py  optimizer.py  train.py  trainer.py
training/dataset/: transforms.py  utils.py  vos_dataset.py  vos_raw_dataset.py
training/model/: sam2.py
training/scripts/: sav_frame_extraction_submitit.py
training/utils/: checkpoint_utils.py  train_utils.py
(+21 files in other folders)
