[build-system]
requires = ["setuptools>=45", "wheel", "torch>=2.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "sam2"
version = "1.1.0"
description = "SAM 2: Segment Anything in Images and Videos"
readme = "README.md"
requires-python = ">=3.10.0"
license = {text = "Apache 2.0"}
authors = [
    {name = "Meta AI", email = "segment-anything@meta.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "numpy>=1.24.4",
    "tqdm>=4.66.1",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "pillow>=9.4.0",
]

[dependency-groups]
dev = [
    "Flask>=3.0.3",
    "Flask-Cors>=5.0.0",
    "av>=13.0.0",
    "dataclasses-json>=0.6.7",
    "eva-decord>=0.6.1",
    "gunicorn>=23.0.0",
    "imagesize>=1.4.1",
    "pycocotools>=2.0.8",
    "strawberry-graphql>=0.243.0",
    "matplotlib>=3.9.1",
    "jupyter>=1.0.0",
    "opencv-python>=4.7.0",
    "eva-decord>=0.6.1",
    "black==24.2.0",
    "usort==1.0.2",
    "ufmt==2.0.0b2",
    "fvcore>=0.1.5.post20221221",
    "pandas>=2.2.2",
    "scikit-image>=0.24.0",
    "tensorboard>=2.17.0",
    "pycocotools>=2.0.8",
    "tensordict>=0.6.0",
    "opencv-python>=4.7.0",
    "submitit>=1.5.1",
    "twine>=6.1.0",
    "pre-commit>=4.2.0",
    "ruff==0.11.2",
]

[project.urls]
"Homepage" = "https://github.com/facebookresearch/sam2"
"Bug Reports" = "https://github.com/facebookresearch/sam2/issues"
"Source" = "https://github.com/facebookresearch/sam2"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sam2*"]
exclude = ["notebooks*", "assets*", "build*", "demo*", "sam2_config*", "sav_dataset*", "training*"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools]
include-package-data = true

[tool.ruff.lint]
ignore = [
    "E722",
]
